# xcdo

./: check.py  pyproject.toml  requirements-test.txt  test_xcdo.py  tox.ini  xcdo.py
files/: cdo_operators.txt
src/xcdo/cli/: call_tree.py  exceptions.py
src/xcdo/cli/argument/: __init__.py  tokens.py
src/xcdo/cli/operation/: __init__.py
src/xcdo/cli/operator/: _Operator.py  _Reader.py
src/xcdo/cli/registry/: _Registry.py
src/xcdo/core/: operator.py
src/xcdo/core/cli/: __init__.py  arg.py  argument_parser.py  argument_token.py  argument_tokens.py  exceptions.py  notes.md  operation.py  operations.py  operator_argument.py
src/xcdo/operators/cdo_cache/: cache_handler.py  cdo_cache.py  interfaces.py  types.py
tests/xcdo/: test_cache_handler.py  test_cdo_cache.py  test_xcdo.py
tests/xcdo/cli/: test_CallTree_parse_arguments.py  test_Registry.py  test_operation.py
tests/xcdo/cli/argument/: test_parser.py  test_token.py  test_tokens.py
tests/xcdo/cli/call_tree/: conftest.py
tests/xcdo/cli/operator/: test_BaseOperator.py  test_BaseOperator_load_params.py  test_Generator_call.py  test_Operator_call.py  test_Reader.py  test_Writer.py  test_operator_factory.py  test_reader_factory.py  test_writer_factory.py
xcdo/: cdo_cache.py
xcdo/core/: __init__.py  base.py  data_set.py
xcdo/core/base/: __init__.py  arg.py  operator.py  option_arg.py
xcdo/core/base/cli/: __init__.py  (+1 more)
xcdo/core/cli/: arg.py  exceptions.py  operator_arg.py
xcdo/operators/cdo_cache/: __init__.py  cache_handler.py  cdo_cache.py  cdo_handler.py  exceptions.py  interfaces.py  types.py
(+77 files in other folders)
